small style edits

--- a/legacy.tex
+++ b/legacy.tex
@@ -127,7 +127,7 @@ While identifying putative low-quality SNPs to exclude, using a higher $p$-value
 The variants that are associated to the quality of mapped bases have an enrichment in *AC${\rightarrow}$*CC mutations, GA*${\rightarrow}$GG*, and GC*${\rightarrow}$GG* mutations.
 These three enrichments can be summarized as an excess of G**${\rightarrow}$GG* in low-mapping quality individuals.
 
-Thus this mutational signal is heavily enriched in GWAS suspicious SNPs, but residual signal remains in non-significant SNPs, presumably because many rare alleles found in individuals with low-quality data remain unidentifiable using association techniques. \sgcomment{do we excluse singletons? We should quantify how much reduction in signal we see.}
+Thus this mutational signal is heavily enriched in GWAS suspicious SNPs, but residual signal remains in non-significant SNPs, presumably because many rare alleles found in individuals with low-quality data remain unidentifiable using association techniques. 
 %For this reason, the heterogeneously distributed signal persisted in the 1kGP Japanese even after filtering the variants that were significantly associated to quality. 
 The removal of individuals with average mapping quality below 30 successfully removes the *AC${\rightarrow}$*CC signal \sgcomment{How about the others?}.
 For population genetic analyses, the removal of low-mapping quality individuals appears preferable to filtering. 
@@ -192,7 +192,7 @@ Despite using the state of the art quality controls, these erroneous variants ma
 \section{Discussion}
 			
 \subsection{Twins Research Human Genetics}
-\sgcomment{HAd we ever discusssed that these GWAS hits were not genome-wide significant?}
+\sgcomment{Had we ever discusssed that these GWAS hits were not genome-wide significant?}
 This paper identified SNPs associated to ADHD using a GWAS on quantitative measures of ADHD symptoms.
 While none of their SNPs reached significance below $ p < 10^{-8}$, they reported their results below significance below $ p < 10^{-5}$.
 The data used was imputed genotype data using Hapmap II as the reference.
