updated HapMap + gnomAD SFS

--- a/legacy.tex
+++ b/legacy.tex
@@ -198,7 +198,7 @@ Furthermore, the approach they used to impute genotype data for GWAS is very com
 %A literature search of the keywords 'GWAS Genotype Imputation' yielded 19,300 results. \sgcomment{What is this about??}
 
 \subsection{PLos One}
-This paper used the raw BAM files from the 1kGP to identify EBV copy number by comparing the coverage of mapped reads to EBV.
+This paper used the raw BAM files from the 1kGP to identify EBV copy number by comparing the number of reads that mapped to EBV.
 They did PCR confirmation of EBV copy number using 7 samples from some of the populations, however all of these samples have relatively high quality data.
 They performed a GWAS on the EBV copy number and identified only one SNP with significance below $ p < 10^{-8}$. 
 However they reported the SNPs reading significance below $ p < 10^{-6}$. 
