--- a/Legacy.bib
+++ b/Legacy.bib
@@ -21,6 +21,17 @@ pmid = {28654678},
 title = {{Genetic factors affecting EBV copy number in lymphoblastoid cell lines derived from the 1000 Genome Project samples}},
 year = {2017}
 }
+@article{McCarthy2016,
+abstract = {We describe a reference panel of 64,976 human haplotypes at 39,235,157 SNPs constructed using whole-genome sequence data from 20 studies of predominantly European ancestry. Using this resource leads to accurate genotype imputation at minor allele frequencies as low as 0.1{\%} and a large increase in the number of SNPs tested in association studies, and it can help to discover and refine causal loci. We describe remote server resources that allow researchers to carry out imputation and phasing consistently and efficiently.},
+author = {McCarthy, Shane and Das, Sayantan and Kretzschmar, Warren and Delaneau, Olivier and Wood, Andrew R. and Teumer, Alexander and Kang, Hyun Min and Fuchsberger, Christian and Danecek, Petr and Sharp, Kevin and Luo, Yang and Sidore, Carlo and Kwong, Alan and Timpson, Nicholas and Koskinen, Seppo and Vrieze, Scott and Scott, Laura J. and Zhang, He and Mahajan, Anubha and Veldink, Jan and Peters, Ulrike and Pato, Carlos and {Van Duijn}, Cornelia M. and Gillies, Christopher E. and Gandin, Ilaria and Mezzavilla, Massimo and Gilly, Arthur and Cocca, Massimiliano and Traglia, Michela and Angius, Andrea and Barrett, Jeffrey C. and Boomsma, Dorrett and Branham, Kari and Breen, Gerome and Brummett, Chad M. and Busonero, Fabio and Campbell, Harry and Chan, Andrew and Chen, Sai and Chew, Emily and Collins, Francis S. and Corbin, Laura J. and Smith, George Davey and Dedoussis, George and Dorr, Marcus and Farmaki, Aliki Eleni and Ferrucci, Luigi and Forer, Lukas and Fraser, Ross M. and Gabriel, Stacey and Levy, Shawn and Groop, Leif and Harrison, Tabitha and Hattersley, Andrew and Holmen, Oddgeir L. and Hveem, Kristian and Kretzler, Matthias and Lee, James C. and McGue, Matt and Meitinger, Thomas and Melzer, David and Min, Josine L. and Mohlke, Karen L. and Vincent, John B. and Nauck, Matthias and Nickerson, Deborah and Palotie, Aarno and Pato, Michele and Pirastu, Nicola and McInnis, Melvin and Richards, J. Brent and Sala, Cinzia and Salomaa, Veikko and Schlessinger, David and Schoenherr, Sebastian and Slagboom, P. Eline and Small, Kerrin and Spector, Timothy and Stambolian, Dwight and Tuke, Marcus and Tuomilehto, Jaakko and {Van Den Berg}, Leonard H. and {Van Rheenen}, Wouter and Volker, Uwe and Wijmenga, Cisca and Toniolo, Daniela and Zeggini, Eleftheria and Gasparini, Paolo and Sampson, Matthew G. and Wilson, James F. and Frayling, Timothy and {De Bakker}, Paul I.W. and Swertz, Morris A. and McCarroll, Steven and Kooperberg, Charles and Dekker, Annelot and Altshuler, David and Willer, Cristen and Iacono, William and Ripatti, Samuli and Soranzo, Nicole and Walter, Klaudia and Swaroop, Anand and Cucca, Francesco and Anderson, Carl A. and Myers, Richard M. and Boehnke, Michael and McCarthy, Mark I. and Durbin, Richard and Abecasis, Gon{\c{c}}alo and Marchini, Jonathan},
+doi = {10.1038/ng.3643},
+isbn = {1546-1718 (Electronic) 1061-4036 (Linking)},
+issn = {15461718},
+journal = {Nature Genetics},
+pmid = {27548312},
+title = {{A reference panel of 64,976 haplotypes for genotype imputation}},
+year = {2016}
+}
 @article{RDevelopmentCoreTeam2016,
 abstract = {R Development Core Team (2011). R: A language and environment for statistical computing. R Foundation for Statistical Computing, Vienna, Austria. ISBN 3-900051-07-0, URL http://www.R-project.org/.},
 archivePrefix = {arXiv},
@@ -145,14 +156,6 @@ pmid = {27535533},
 title = {{Analysis of protein-coding genetic variation in 60,706 humans}},
 volume = {536},
 year = {2016}
-}
-@misc{HapMap,
-abstract = {http://www.ashg.org/2014meeting/abstracts/fulltext/f140120231.htm A genotype likelihood based phasing and imputation method for massive sample sizes of low-coverage sequencing data. W. Kretzschmar1, J. Marchini1,2, The Haplotype Reference Consortium 1) Wellcome Trust Centre for Human Genetics, University of Oxford, Oxford, United Kingdom; 2) Department of Statistics, University of Oxford, Oxford, United Kingdom. Calling genotypes from low-coverage sequencing data is a computationally challenging task. Applying existing methods to cohorts of a few thousand samples typically takes many weeks on large-scale compute clusters. Such methods will not scale to calling genotypes for the first release of the Haplotype Reference Consortium (HRC) (http://www.haplotype-reference-consortium.org/), which will consist of {\~{}}31,500 samples. We have developed methods that substantially cut the running time of calling genotypes in the HRC. Our method is an adaptive MCMC algorithm for genotype calling and haplotype imputation, derived from SNPTools (Wang et al. Genome Res 2013), that learns local haplotype clustering as the MCMC chain progresses, and acts to guide the proposal distribution for haplotype sharing between samples. This adaptive scheme is very flexible and can naturally accommodate any existing haplotypes estimates. Our method also supports phasing from reference panels and the inclusion of knowledge about family structure. In addition, we have implemented this approach on a GPU resulting in a dramatic increase in speed. To illustrate the improvements in speed we applied several methods to a single chunk of 1,024 sites from the HRC pilot project consisting of genotype likelihoods on 12,753 samples. Beagle (v3.3.2) took 1016m (averaged over 12 regions). Our new method took 65m, and the GPU implementation of our method took 3m at comparable accuracy. These new methods provide a computational solution for calling genotypes in next-generation sequencing studies of tens to hundreds of thousands of samples. We plan to provide a public software implementation of our GPU method that can be run via cloud computing. You may contact the first author (during and after the meeting) at warren.kretzschmar@well.ox.ac.uk},
-author = {Marchini, Jonathan L and Abecasis, Goncalo and Durbin, Richard},
-booktitle = {http://www.haplotype-reference-consortium.org/},
-title = {{Haplotype Reference Consortium}},
-url = {http://www.haplotype-reference-consortium.org/},
-year = {2014}
 }
 @article{Mallick2016,
 abstract = {Here we report the Simons Genome Diversity Project data set: high quality genomes from 300 individuals from 142 diverse populations. These genomes include at least 5.8 million base pairs that are not present in the human reference genome. Our analysis reveals key features of the landscape of human genome variation, including that the rate of accumulation of mutations has accelerated by about 5{\%} in non-Africans compared to Africans since divergence. We show that the ancestors of some pairs of present-day human populations were substantially separated by 100,000 years ago, well before the archaeologically attested onset of behavioural modernity. We also demonstrate that indigenous Australians, New Guineans and Andamanese do not derive substantial ancestry from an early dispersal of modern humans; instead, their modern human ancestry is consistent with coming from the same source as that of other non-Africans.},
